# Shorts-Creator

./: .env.example  README.md  docker-compose.yml
apps/web/: README.md  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/health/: page.tsx
apps/web/app/upload/: page.tsx
apps/worker/: README.md  pyproject.toml
apps/worker/src/shorts_worker/: __init__.py  consumer.py  contracts.py
docs/: clip_scoring_spec.md
supabase/: seed.sql
supabase/migrations/: 20260426000100_initial_pipeline_schema.sql  20260426000200_phase2_video_pipeline_schema.sql
