[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shorts-worker"
version = "0.1.0"
description = "Background queue consumer for Shorts Creator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "redis>=5.0.4"
]

[project.scripts]
shorts-worker = "shorts_worker.consumer:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
